added config class for security

--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,12 @@
     		<version>0.12.6</version>
 		</dependency>
 
+		<dependency>
+    		<groupId>org.projectlombok</groupId>
+    		<artifactId>lombok</artifactId>
+    		<version>1.18.36</version>
+    		<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
